test: update controller and service tests for contact and category entities to pagination and sorting
- Updated CategoryControllerTest, CategoryServiceTest, ContactControllerTest and ContactServiceTest to testing of paginated and sorted listing